[package]
name = "brick-bot"
version = "0.1.0"
authors = ["Petr Volf <Petr.volf216@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.38"
once_cell = "1.5.2"
thiserror = "1.0"
serde_repr = "0.1"
bytes = "1"
image = "0.23"