[package]
name = "brick-bot"
version = "0.4.0"
authors = ["Petr Volf <Petr.volf216@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.38"
thiserror = "1.0"
serde_repr = "0.1"
bytes = "1"
image = {version = "0.23", default-features = false, features = ["png", "gif"]}
toml = "0.5"
gif = "0.11"
tokio-tungstenite = {version="*", features=["tls"]}
futures-util = "0.3.12"
log = "0.4"
simple_logger = "1.11.0"
chrono = "0.4"
rand = "0.8"